k8s/02-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: nildemand
spec:
  type: NodePort
  selector:
    app: nildemand
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
