k8s/03-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nildemand
spec:
  rules:
  - host: nildemand.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nildemand
          servicePort: 8080
